# try-on-anything

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  CLAUDE.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: accessory_try_on.py  base.py  clothing_try_on.py  tryon.py  utils.py
backend/app/schemas/: __init__.py  common.py  tryon.py
backend/app/services/: __init__.py  accessory_try_on.py  base.py  clothing_try_on.py  task_manager.py  tryon.py
docs/: README_en.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: accessory-try-on.js  clothing-try-on.js  common.js  tryon.js
frontend/src/components/: ImageUploader.vue  LanguageSwitcher.vue  ResultDisplay.vue  TaskSidebar.vue  ThemeSwitcher.vue
frontend/src/locales/: en-US.json  index.js  zh-CN.json
frontend/src/router/: index.js
frontend/src/styles/: main.scss
frontend/src/utils/: crypto.js  imageStorage.js  theme.js
frontend/src/views/: SettingsView.vue  TryOnView.vue
scripts/: start.py
src/try_on_anything/clients/: __init__.py  qwen_vl.py  wan.py
src/try_on_anything/common/: constants.py  types.py
src/try_on_anything/generators/: __init__.py  accessory_try_on.py  base.py  clothing_try_on.py
src/try_on_anything/pipelines/: __init__.py  accessory_try_on.py  base.py  clothing_try_on.py  types.py
src/try_on_anything/utils/: __init__.py  image_utils.py
tests/: test_accessory_try_on.py  test_task_cleanup.py
